add backend, wait for tests